# ckanext-pgsearch

./: .snyk  MANIFEST.in  README.md  dev-requirements.txt  docker-compose.test.yml  pyproject.toml  requirements.txt  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/pgsearch/: plugin.py
ckanext/pgsearch/assets/: script.js  webassets.yml
ckanext/pgsearch/tests/: test_integration.py  test_plugin.py
ckanext/psqlsearch/: plugin.py
ckanext/psqlsearch/assets/: script.js  webassets.yml
ckanext/psqlsearch/tests/: test_integration.py  test_plugin.py
