[project]
name = "ckanext-pgsearch"
version = "0.0.1"
description = "CKAN PostgreSQL-backed search backend replacement"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Fuhu Xia", email = "fxia@reisystems.com"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

keywords = ["CKAN", "PostgreSQL", "search"]
dependencies = []

[project.urls]
Homepage = "https://github.com/FuhuXia/ckanext-pgsearch"
Repository = "https://github.com/FuhuXia/ckanext-pgsearch"
Issues = "https://github.com/FuhuXia/ckanext-pgsearch/issues"

[project.entry-points."ckan.plugins"]
pgsearch = "ckanext.pgsearch.plugin:PgsearchPlugin"


[build-system]
requires = ["setuptools<82"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
